--- a/README/wazuh.conf
+++ b/README/wazuh.conf
@@ -1,17 +1,17 @@
 [alerts.json.sample]
-interval = 5
-earliest = -5s
+interval = 10
+earliest = -10s
 latest = now
-count = 1000
+count = 20
 hourOfDayRate = { "0": 0.8, "1": 1.0, "2": 0.9, "3": 0.7, "4": 0.5, "5": 0.4, "6": 0.4, "7": 0.4, "8": 0.4, "9": 0.4, "10": 0.4, "11": 0.4, "12": 0.4, "13": 0.4, "14": 0.4, "15": 0.4, "16": 0.4, "17": 0.4, "18": 0.4, "19": 0.4, "20": 0.4, "21": 0.4, "22": 0.5, "23": 0.6 }
 dayOfWeekRate = { "0": 0.7, "1": 0.7, "2": 0.7, "3": 0.5, "4": 0.5, "5": 1.0, "6": 1.0 }
 randomizeCount = 0.2
 randomizeEvents = true
 
 outputMode = file
-fileName = /var/ossec/logs/alerts/alerts.log
+fileName = /var/ossec/logs/alerts/alerts2.json
 
 ## Replace timestamp Feb  4 07:52:53
-token.0.token = \w{3}\s+\d{1,2}\s+\d{2}:\d{2}:\d{2}
+token.0.token = \d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d{2}-\d{4}
 token.0.replacementType = timestamp
-token.0.replacement = %b %d %H:%M:%S
+token.0.replacement = %Y-%m-%dT%H:%M:%S+0000
